ocl-misc: various/minor SMM-kernel improvements and fixes
* Introduced type-id for kernel-code (TN), and adjusted atomic_add_global_xchg code-path (PTX).
* Removed unnecessary barrier and made another (necessary) barrier conditional (at compile-time).
* Makefiles: Improved detecting OpenCL, use ARCH_NUMBER=80 if WITH_GPU=A100 (rely on V100-params).
* Fixed and adjusted ATOMIC_ADD2_GLOBAL code-path.

--- a/src/acc/cuda/Makefile
+++ b/src/acc/cuda/Makefile
@@ -27,17 +27,21 @@ ifeq (,$(PYTHON))
 endif
 
 ifeq ($(WITH_GPU),K20X)
- ARCH_NUMBER = 35
+  ARCH_NUMBER = 35
 else ifeq ($(WITH_GPU),K40)
- ARCH_NUMBER = 35
+  ARCH_NUMBER = 35
 else ifeq ($(WITH_GPU),K80)
- ARCH_NUMBER = 37
+  ARCH_NUMBER = 37
 else ifeq ($(WITH_GPU),P100)
- ARCH_NUMBER = 60
+  ARCH_NUMBER = 60
 else ifeq ($(WITH_GPU),V100)
- ARCH_NUMBER = 70
+  ARCH_NUMBER = 70
+else ifeq ($(WITH_GPU),A100)
+  # TODO: update when tuned parameters for A100 available
+  override WITH_GPU := V100
+  ARCH_NUMBER = 80
 else ifeq (,$(ARCH_NUMBER))
- $(error Unknown ARCH_NUMBER since WITH_GPU="$(WITH_GPU)" is not recognized)
+  $(error Unknown ARCH_NUMBER since WITH_GPU="$(WITH_GPU)" is not recognized)
 endif
 
 CFLAGS := -fPIC \
