Implemented auto-tuning A and B accesses like auto (0), shared (1), shared-bc (2), and private (3).
* Allow updating JSONs with device-name given by command line argument (tune_multiply.py).
* Adjusted libsmm_acc_init to warn in case of failing to load tuned parameters.
* Adjusted kernel-defaults (in case of no auto-tuned parameters).
* Improved error message related to missing ACC-device.
* Rewrite JSONs with keys in order (tune_multiply.py).
* Adjusted default target; no tests (Makefile).

--- a/src/acc/cuda/Makefile
+++ b/src/acc/cuda/Makefile
@@ -12,8 +12,10 @@ OBJSMM := $(SRCSMM:.cpp=.o)
 
 INCALL := $(INCACC) $(INCSMM)
 
-LIBXSMMROOT ?= $(wildcard ../../../../libxsmm)
-LIBXSMMROOT ?= $(wildcard $(HOME)/libxsmm)
+LIBXSMMROOT := $(wildcard ../../../../libxsmm)
+ifeq (,$(LIBXSMMROOT))
+  LIBXSMMROOT := $(wildcard $(HOME)/libxsmm)
+endif
 NVCC ?= $(shell which nvcc 2>/dev/null)
 CUDA_PATH ?= $(if $(NVCC),$(abspath $(dir $(NVCC))/..))
 UNAME := $(shell uname)
@@ -124,11 +126,11 @@ endif
 LDFLAGS += -lcudart -lcublas -lnvrtc -lcuda
 CFLAGS += -Wno-variadic-macros -Wno-long-long
 
-.PHONY: all
-all: ../dbcsr_acc.a ../dbcsr_acc_smm.a bench test
-
 .PHONY: bench
 bench: ../acc_bench_smm ../acc_bench_trans
+
+.PHONY: all
+all: ../dbcsr_acc.a ../dbcsr_acc_smm.a bench test
 
 .PHONY: test
 test: ../dbcsr_acc_test
