ocl: additional tunable parameter
* Introduced dump-level for external preprocessor (ACC_OPENCL_DUMP=1), dump IR/binary (ACC_OPENCL_DUMP=2).
* Introduced tunable parameter for limited loop-unroll (OPENCL_LIBSMM_SMM_LU=0|1).
* Introduced tunable parameter for handling WG-size (OPENCL_LIBSMM_SMM_WG).
* Introduced ATOMIC_INC_NZ incl. tunable parameter.

General:
* Removed legacy/alternative names of tunable parameters. Updated documentation.
* Support CPPFLAGS and allow flags such as -d, -d, --comments, or --debug (acc_opencl.sh).
* Keep comments when embedding kernel code (acc_opencl.sh -c).
* Fixed splitting device into sub-devices.

tune_multiply.py:
* Implemented verbose output (experiment info when auto-tuning parameters).
* Omit benchmark invocation if update is launched with given device name.
* Uninstall signal handler when calling the handler (tune_multiply.py).
* Fixed command-line arguments (None->0). Revised short options (CLI).
* Avoid launching benchmark if only merging JSONs.

--- a/src/acc/opencl/Makefile
+++ b/src/acc/opencl/Makefile
@@ -68,6 +68,7 @@ else
 endif
 
 ifneq (0,$(DBG))
+  CPPFLAGS += -CC
   ifeq (,$(DBG))
     CFLAGS += -O2
   else
@@ -120,7 +121,11 @@ else
     CFLAGS += -I$(CUDATOOLKIT_HOME)/include
     LDFLAGS += -L$(CUDATOOLKIT_HOME)/lib64
   endif
-  LDFLAGS += -lOpenCL
+  ifneq (,$(wildcard $(LIBOPENCL)))
+    LDFLAGS += $(LIBOPENCL)
+  else
+    LDFLAGS += -lOpenCL
+  endif
 endif
 
 .PHONY: bench
@@ -133,7 +138,7 @@ all: ../dbcsr_acc.a ../dbcsr_acc_smm.a bench test
 test: ../dbcsr_acc_test
 
 smm/opencl_kernels.h: acc_opencl.sh $(KERNEL)
-	./acc_opencl.sh $(KERNEL) $(PARAMS) $@
+	CPPFLAGS=$(CPPFLAGS) ./acc_opencl.sh $(KERNEL) $(PARAMS) $@
 
 ../dbcsr_acc.a: $(OBJACC)
 	$(AR) -rs $@ $^
