ocl: improved handling loaded vs embedded parameters
* Allow successful libsmm_acc_init even if given parameter file cannot be loaded or does not exist (OPENCL_LIBSMM_SMM_PARAMS).
* Introduced OPENCL_LIBSMM_SUITABLE which allows to disable suitability-check even if support/enabled at compile-time.
* If PARAMS_DIR is given, attempt to automatically determine GPU-environment (OPENCL_LIBSMM_SMM_PARAMS).
* Support unsuitable kernel (return code -1) without failing the benchmark/test (acc_bench_*).
* Run (optional/disabled) suitability test even if OPENCL_LIBSMM_SMM_PARAMS is given.
* Load embedded parameters if loading from file failed (soft error).
* Print number of test cases. Fixed title of test cases (Makefile).
* Track and print performance of seed- or initial configuration.
* Removed debug code (acc_bench_trans).

--- a/src/acc/cuda/Makefile
+++ b/src/acc/cuda/Makefile
@@ -177,8 +177,8 @@ test-interface: $(MAKDIR)/../dbcsr_acc_test
 
 .PHONY: test-trans
 test-trans: bench
-	$(eval SHAPES = $(shell $(MAKDIR)/../acc_triplets.sh -l -s $(SPECID) -m $(MAXEXT) -n $(NTRANS) -a))
-	@echo "--- DBCSR OpenCL Transposes ($(words $(SHAPES)))"
+	$(eval SHAPES = $(shell $(MAKDIR)/../acc_triplets.sh -s $(SPECID) -m $(MAXEXT) -n $(NTRANS) -a))
+	@echo "--- DBCSR CUDA Transposes ($(words $(SHAPES)))"
 	@echo "runtime libraries:"
 	@ldd $(MAKDIR)/../acc_bench_trans
 	@echo "hostname: $$(hostname)"
@@ -189,12 +189,13 @@ test-trans: bench
 	done
 
 $(MAKDIR)/test-smm.log: bench
-	@echo "--- DBCSR OpenCL SMMs"
+	$(eval SHAPES = $(shell $(MAKDIR)/../acc_triplets.sh -s $(SPECID) -m $(MAXEXT) -n $(NSMMS)))
+	@echo "--- DBCSR CUDA SMMs ($(words $(SHAPES)))"
 	@echo "runtime libraries:"
 	@ldd $(MAKDIR)/../acc_bench_smm
 	@echo "hostname: $$(hostname)"
 	@echo
-	@$(MAKDIR)/../acc_triplets.sh -l -s $(SPECID) -m $(MAXEXT) -n $(NSMMS) | \
+	@echo "$(SHAPES)" | xargs -n1 | \
 		(CHECK=1 stdbuf --output=L $(MAKDIR)/../acc_bench_smm /dev/stdin \
 			2>$(MAKDIR)/test-smm.err && rm $(MAKDIR)/test-smm.err) | tee $@
 	@if [ -s $(MAKDIR)/test-smm.err ]; then cat $(MAKDIR)/test-smm.err && exit 1; fi
