--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -257,8 +257,8 @@ endif ()
 # DBCSR's C API
 if (WITH_C_API)
   # Build the C API as a separate library
-  add_fypp_sources(DBCSR_C_SRCS dbcsr_api_c.F tensors/dbcsr_tensor_api_c.F
-                   tensors/dbcsr_tensor.h)
+  add_fypp_sources(DBCSR_C_SRCS dbcsr.h dbcsr_api_c.F
+                   tensors/dbcsr_tensor_api_c.F tensors/dbcsr_tensor.h)
 
   add_library(dbcsr_c ${DBCSR_C_SRCS})
   set_target_properties(dbcsr_c PROPERTIES LINKER_LANGUAGE Fortran)
@@ -303,7 +303,7 @@ if (WITH_C_API)
     LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
     ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}")
   install(
-    FILES "${CMAKE_CURRENT_SOURCE_DIR}/dbcsr.h"
+    FILES "${CMAKE_CURRENT_BINARY_DIR}/dbcsr.h"
           "${CMAKE_CURRENT_BINARY_DIR}/tensors/dbcsr_tensor.h"
     COMPONENT C
     DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
