--- a/.gitignore
+++ b/.gitignore
@@ -221,7 +221,12 @@ Session.vim
 # auto-generated tag files
 tags
 .tags
+.tags_swap
 
 # End of https://www.gitignore.io/api/vim,emacs,python,fortran
 
 spack-*
+
+.ccls-cache/
+
+.DS_Store
